--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 codecarbon
-imgaug==0.4.0
-pillow==9.0.0
-pynvml==11.4
+imgaug
 sklearn
-prometheus_client
 tensorflow
 visualkeras
+torch
+torchvision
 img2vec_pytorch
-scipy 
-wget
+scipy
